# weather_tray-rs

./: Cargo.toml  README.md  set_env.cmd
.github/workflows/: rust.yml  rust_real.yml
src/: create_gui.rs  image_creation.rs  main.rs  open_browser.rs  request_maker.rs
