[package]
name = "temp_tray-rs"
version = "0.2.0"
authors = ["Werner1201 <werner.romling@unigranrio.br>", "Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
imageproc = "0.21"
rusttype = "0.9"
systray = { git = "https://github.com/nicolasbauw/systray-rs", tag="0.4.1" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"